react-fastapi-app-k8s/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  namespace: helm-playground
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:

  rules:

  - http:

      paths:
        - pathType: ImplementationSpecific
          path: /api/?(.*)
          backend:
            service:
              name: api-service
              port:
                number: 8000
        
        - pathType: ImplementationSpecific
          path: /fe/?(.*)
          backend:
            service:
              name: fe-service
              port:
                number: 3000
